# fraCtal

./: CMakeLists.txt  README.md
src/: complex.c  fractal.c  main.c  main_fractal.c  mandelbrot.c
src/include/: complex.h  fractal.h  mandelbrot.h
src/lib/ppmimage/: main_test.c  ppm.c
src/lib/ppmimage/include/: geom.h  ppm.h
